apps/network-system/envoy-gateway/app/public/gateway.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.mirceanton.com/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-public
  annotations:
    external-dns.kubernetes.io/target: &loadbalancerIP 10.0.20.250
spec:
  gatewayClassName: envoy-public

  infrastructure:
    annotations:
      lbipam.cilium.io/ips: *loadbalancerIP

  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces: { from: Same } #? same namespace only, for https redirect
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces: { from: All } #? allow all namespaces for https
      tls:
        certificateRefs:
          - kind: Secret
            name: public-tls
